--- a/form_validator/styles.css
+++ b/form_validator/styles.css
@@ -128,6 +128,14 @@ h1 {
   visibility: hidden;
 }
 
+.form_group input.valid {
+  border: 2px solid #2ecc71;
+}
+
+.form_group input.invalid {
+  border: 2px solid red;
+}
+
 button {
   width: 100%;
   margin-top: 10px;
