feat: add fetch post and render post

--- a/Infinite_scroll/styles.css
+++ b/Infinite_scroll/styles.css
@@ -131,6 +131,7 @@ input {
     background-color: var(--main-white);
     text-align: center;
     padding: 10px;
+    font-size: 14px;
     border-radius: 50%;
     color: var(--main-blue);
 }
