--- a/Infinite_scroll/styles.css
+++ b/Infinite_scroll/styles.css
@@ -81,7 +81,7 @@ select {
     --main-blue: #296ca8;
     --sub-blue: #5b95c8;
     --main-white: #fff;
-  }  
+}
 
 body {
     display: flex;
@@ -134,4 +134,42 @@ input {
     font-size: 14px;
     border-radius: 50%;
     color: var(--main-blue);
+}
+
+.loader {
+    display: flex;
+    justify-content: center;
+    position: fixed;
+    bottom: 50px;
+    transition: opacity .3s ease-in;
+    opacity: 0;
+}
+
+.circle {
+    width: 10px;
+    height: 10px;
+    background-color: var(--main-white);
+    border-radius: 50%;
+    margin: 0 10px;
+    animation: bounce .5s ease-in infinite;
+}
+
+.circle:nth-of-type(2) {
+    animation-delay: .1s;
+}
+
+.circle:nth-of-type(3) {
+    animation-delay: .2s;
+}
+
+@keyframes bounce {
+
+    0%,
+    100% {
+        transform: translateY(-10px);
+    }
+
+    50% {
+        transform: translateY(0);
+    }
 }
